customers-service/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customers-ms
  namespace: banking
  labels:
    app: customers-ms
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: customers-ms
  template:
    metadata:
      labels:
        app: customers-ms
        version: v1
      annotations:
        sidecar.istio.io/inject: "true"
        prometheus.io/scrape: "true"
        prometheus.io/port:   "8080"
        prometheus.io/path:   "/actuator/prometheus"
    spec:
      serviceAccountName: customers-ms-sa
      containers:
        - name: customers-ms
          image: rewabank/rewabank-customers-ms:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "256Mi"
              cpu:    "250m"
            limits:
              memory: "512Mi"
              cpu:    "500m"
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
