customers-service/k8s/virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: customers-ms-vs
  namespace: banking
spec:
  hosts:
    - customers-service.banking.svc.cluster.local
  http:
    - match:
        - uri:
            prefix: /api/v1
      timeout: 15s
      retries:
        attempts: 2
        retryOn: gateway-error,reset
        perTryTimeout: 7s
      route:
        - destination:
            host: customers-service.banking.svc.cluster.local
            port:
              number: 8080
